[package]
name = "sentc_light_flutter"
version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
authors.workspace = true
documentation.workspace = true
repository.workspace = true

description = "The flutter implementation for sentc light."

[lib]
name = "sentc_light_flutter"
crate-type = ["staticlib", "cdylib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[dependencies]
# own crypto lib
sentc-crypto-light = { workspace = true, features = ["export", "full_rustls"] }

sentc-crypto-common = { workspace = true }

flutter_rust_bridge = "=2.9.0"
serde_json.workspace = true