[package]
name = "sentc_wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
# own crypto lib
sentc-crypto = {version = "0.1.0", path = "../../../crypto" }

# must be js feature for wasm
getrandom = { version = "0.2", features = ["js"] }

# wasm dep
wasm-bindgen = "0.2.74"
#js-sys = "0.3.58"

# sha2 with non std
sha2 = { version = "0.10", default-features = false }

wasm-bindgen-futures = "0.4.31"

[dependencies.web-sys]
version = "0.3.4"
features = [
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    'Window',
]