[package]
name = "sentc_wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
# own crypto lib
sentc-crypto = {version = "0.1.0", path = "../../../crypto", features = ["server"]}

sentc-crypto-full = {version = "0.1.0", path = "../../../crypto_full", default-features = false, features = ["wasm"]}

# must be js feature for wasm
getrandom = { version = "0.2", features = ["js"] }

# wasm dep
wasm-bindgen = {version = "0.2.74", features = ["serde-serialize"]}
#js-sys = "0.3.58"

# sha2 with non std
sha2 = { version = "0.10", default-features = false }

wasm-bindgen-futures = "0.4.31"

serde = { version = "1.0", default-features = false, features = ["derive", "alloc"]}