[package]
name = "sentc_wasm"
version = "0.5.0"
edition = "2021"
license = "MIT"
description = "Wasm for sentc. End-to-end encryption sdk"
authors = ["Sentclose <contact@sentclose.com>", "Jörn Heinemann <j.heinemann@sentclose.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
# own crypto lib
sentc-crypto = {version = "0.1.0", path = "../../../crypto"}

sentc-crypto-full = {version = "0.1.0", path = "../../../crypto_full", features = ["wasm"]}

sentc-crypto-common = {version = "0.1.0", path = "../../../sdk-common"}

# must be js feature for wasm
getrandom = { version = "0.2", features = ["js"] }

# wasm dep
wasm-bindgen = {version = "0.2.74", features = ["serde-serialize"]}
js-sys = "0.3.58"

# sha2 with non std
sha2 = { version = "0.10", default-features = false }

wasm-bindgen-futures = "0.4.31"

serde = { version = "1.0", default-features = false, features = ["derive", "alloc"]}