[package]
name = "sentc_uniffi_bindgen"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
uniffi = { version = "0.30.0", features = ["cli"] }
