[package]
name = "sentc_flutter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sentc_flutter"
crate-type = ["staticlib", "cdylib"]

[dependencies]
# own crypto lib
sentc-crypto = {version = "0.1.0", path = "../../../../crypto", features = ["server"] }

sentc-crypto-full = {version = "0.1.0", path = "../../../../crypto_full"}

tokio = { version = "1.14.0", features = ["rt-multi-thread"] }

# flutter ffi
flutter_rust_bridge = "1"

anyhow="1.0.58"